# mdbook-asciinema

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  SUPPORT.md  logs.txt
.github/workflows/: dependency-review.yml  deploy.yml  pages.yml  tests.yml
example/: README.md  book.toml
example/src/: SUMMARY.md  chapter_1.md
example/src/video/: codeql-database-create.cast  player-opts.json
mdbook-asciinema/: Cargo.toml
mdbook-asciinema/assets/: asciinema-player.css  asciinema-player.min.js
mdbook-asciinema/src/: lib.rs  main.rs  types.rs
mdbook-asciinema/tests/: preprocessor.rs
mdbook-asciinema/tests/resources/basic/: .gitignore  book.toml
mdbook-asciinema/tests/resources/basic/src/: chapter_1.md
mdbook-asciinema/tests/resources/basic/src/videos/: simple.cast
xtask/: Cargo.toml
xtask/src/: main.rs  types.rs  utils.rs
