[workspace.package]
authors = ["Shadi Samadi<s-samadi@github.com>"]
edition = "2024"
license = "MIT"
homepage = "https://github.com/github/mdbook-asciinema"
readme = "README.md"
repository = "https://github.com/github/mdbook-asciinema"
version = "0.1.0"

[workspace]
resolver = "3"
members = [
    "mdbook-asciinema",
    "xtask"
]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
mdbook-preprocessor = "0.5"
rand = "0.10"
regex = "1.12"
rust-embed = "8.11"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "3.2"