[package]
edition.workspace = true
name = "xtask"
publish = false
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq = { workspace = true, features = ["json"] }
